[package]
name = "ante_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
solana-client = "3.1.12"
solana-sdk = "4.0.1"
axum = "0.8.8"
tokio-stream = "0.1"
postgres = "0.19.13"
sqlx = {version="0.8.6", features=["postgres", "macros", "runtime-tokio-rustls"]}
tokio = {version="1.51.0", features=["rt-multi-thread", "full", ]}
