[package]
name = "ante_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
solana-client = "3.1.12"
solana-sdk = "4.0.1"
axum = {version="0.8.8", features=["ws"]}
tokio-stream = "0.1"
postgres = "0.19.13"
tokio-tungstenite = "0.29.0"  
futures-util = "0.3"  
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0"  
sqlx = {version="0.8.6", features=["postgres", "macros", "runtime-tokio-rustls"]}
tokio = {version="1.50.0", features=[ "full",]}
